Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48158

qdoc: Cannot link to QML signal documentation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.5.1, 5.6
    • Build tools: qdoc
    • None
    • b2ca127

    Description

      Trying to link to the documentation of any QML signal fails, even within the QML type reference, when using the following link syntax:

      \l someSignal() // fails
      \l someSignal   // OK
      

      For linking, signals should be considered the same as QML methods - i.e, links should work with parentheses included.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes