qdoc: Allow linking to QML signals with their proper name

Trying to link to QML signal documentation failed when the link
string ends in parentheses:

    \l someSignal()

This commit fixes the issue by adding QML signals into the list
of primary functions, making it thereby available for
findFunctionNode() method.

Change-Id: Ib5a8325cd18171cdea392bcc1af676efe373f433
Task-number: QTBUG-48158
Reviewed-by: Martin Smith <martin.smith@digia.com>